--- a/index.html
+++ b/index.html
@@ -21,14 +21,22 @@
       border-radius: 16px;
       box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
       display: flex;
+      flex-direction: column;
+      align-items: center;
       width: 90%;
       max-width: 900px;
+      padding: 20px;
+    }
+
+    .content {
+      display: flex;
+      width: 100%;
       overflow: hidden;
     }
 
     .panel {
       flex: 1;
-      padding: 20px;
+      padding: 10px;
       display: flex;
       flex-direction: column;
     }
@@ -80,6 +88,7 @@
       font-family: monospace;
       font-size: 1.2rem;
       overflow-y: auto;
+      min-height: 100px;
     }
 
     .cell {
@@ -95,6 +104,29 @@
       background: #e5e7eb;
     }
 
+    .copy-btn {
+      margin-top: 10px;
+      background: #4f46e5;
+      color: white;
+      border: none;
+      padding: 8px 14px;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 1rem;
+      transition: background 0.3s;
+    }
+
+    .copy-btn:hover {
+      background: #4338ca;
+    }
+
+    .copied {
+      color: #10b981;
+      font-size: 0.9rem;
+      margin-top: 6px;
+      display: none;
+    }
+
     footer {
       margin-top: 15px;
       font-size: 0.9rem;
@@ -104,22 +136,26 @@
 </head>
 <body>
   <div class="container">
-    <div class="panel">
-      <h2 id="left-label">Text</h2>
-      <textarea id="inputText" placeholder="Type text here..."></textarea>
+    <div class="content">
+      <div class="panel">
+        <h2 id="left-label">Text</h2>
+        <textarea id="inputText" placeholder="Type text here..."></textarea>
+      </div>
+
+      <div class="middle" id="swapBtn" title="Swap translation direction">
+        <span>⇆</span>
+      </div>
+
+      <div class="panel">
+        <h2 id="right-label">Morse Code</h2>
+        <div id="outputBox" class="output-box"></div>
+        <button class="copy-btn" id="copyBtn">Copy</button>
+        <div id="copiedMsg" class="copied">Copied!</div>
+      </div>
     </div>
 
-    <div class="middle" id="swapBtn" title="Swap translation direction">
-      <span>⇆</span>
-    </div>
-
-    <div class="panel">
-      <h2 id="right-label">Morse Code</h2>
-      <div id="outputBox" class="output-box"></div>
-    </div>
+    <footer>Made by Dylan Law</footer>
   </div>
-
-  <footer>Made by Dylan Law</footer>
 
   <script>
     const morseCode = {
@@ -143,6 +179,8 @@
     const swapBtn = document.getElementById("swapBtn");
     const leftLabel = document.getElementById("left-label");
     const rightLabel = document.getElementById("right-label");
+    const copyBtn = document.getElementById("copyBtn");
+    const copiedMsg = document.getElementById("copiedMsg");
 
     function beautifyMorse(code) {
       return code.replace(/\./g, '·').replace(/-/g, '—');
@@ -193,6 +231,13 @@
       input.value = "";
       output.innerHTML = "";
       input.placeholder = (mode === "text-to-morse") ? "Type text here..." : "Type Morse code here (separate by spaces)...";
+    });
+
+    copyBtn.addEventListener("click", () => {
+      const copiedText = Array.from(output.children).map(c => c.innerText).join(' ');
+      navigator.clipboard.writeText(copiedText);
+      copiedMsg.style.display = "block";
+      setTimeout(() => copiedMsg.style.display = "none", 2000);
     });
   </script>
 </body>
