--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 <body>
   <header>摩斯密码翻译器</header>
   <main>
-    <p>只支持英文，例如：I LOVE YOU </p>
+    <p>只支持英文，例如：Hi </p>
     <textarea id="inputText" placeholder="请输入文字或摩斯密码..."></textarea>
 
     <div class="btn-container">
