--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 <body>
   <header>摩斯密码翻译器</header>
   <main>
-    <p>只支持英文，例如：Hi </p>
+    <p>只支持英文</p>
     <textarea id="inputText" placeholder="请输入文字或摩斯密码..."></textarea>
 
     <div class="btn-container">
@@ -132,7 +132,12 @@
       '0': '-----', '1': '.----', '2': '..---', '3': '...--', 
       '4': '....-', '5': '.....', '6': '-....', '7': '--...', 
       '8': '---..', '9': '----.',
-      ' ': '/', '，': '--..--', '。': '.-.-.-', '？': '..--..'
+      ' ': '/',
+      ',': '--..--', '.': '.-.-.-', '?': '..--..', '!': '-.-.--',
+      ':': '---...', ';': '-.-.-.', "'": '.----.', '"': '.-..-.',
+      '(': '-.--.', ')': '-.--.-', '&': '.-...', '/': '-..-.',
+      '=': '-...-', '+': '.-.-.', '-': '-....-', '_': '..--.-',
+      '$': '...-..-', '@': '.--.-.'
     };
 
     const reverseMorse = Object.fromEntries(Object.entries(morseCode).map(([k, v]) => [v, k]));
