--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     </div>
 
     <p>输出结果：</p>
-    <textarea id="outputText" readonly placeholder="翻译结果将显示在这里"></textarea>
+    <textarea id="outputText" placeholder="翻译结果将显示在这里"></textarea>
 
     <div class="btn-container">
       <button class="copy-btn" id="copyBtn">复制结果</button>
