--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
 
     <div class="btn-container">
       <button id="toMorseBtn">文字转摩斯密码 ↓</button>
-      <button id="toTextBtn">摩斯密码转文字 ↑</button>
+      <button id="toTextBtn">摩斯密码转文字 ↓</button>
     </div>
 
     <p>输出结果：</p>
-    <textarea id="outputText" placeholder="翻译结果将显示在这里"></textarea>
+    <textarea id="outputText" readonly placeholder="翻译结果将显示在这里"></textarea>
 
     <div class="btn-container">
       <button class="copy-btn" id="copyBtn">复制结果</button>
